  profit stat until the match ends (matches that go over deadline simply don't
  count instead of counting as a profit loss for both players).

--Fixed a bug in pairwise tournament feeding blocking so that it only blocks
  based on current tournament pairwise profits.

--Fixed prize calculations to handle settings where every player gets a prize.





Version 12     2015-January-8

--Fixed decimal precision formatting glitch on post-game result screen when
  starting balance has only two decimals.

--Fixed possible freeze when dragging pickers (thanks Benjamin Y).

--Fixed column pickers bouncing back and forth at low target framerates
  (thanks Zed).

--Fixed crash when halfFrameRate would push frame rate to 0.

--Added settings for controlling watercolor stroke darkness to accommodate
  various monitor brightnesses (specifically for PAX booth monitors).

--Added display of recomputed house balance in admin UI.

--Fixed server to correct for reset of auto_increment game_id values after
  a MySQL restart.  Now game_ids are guaranteed unique.

--Added support for setting antes greater than 1 on server.

--Added server stats for tracking rounds, folds, one-ante folds, and reveals.





Version 11     Live Server Fixes

--Setting for a house table rake (coins taken from each player at the start of
  a table).  To support tournament mode.

--Support for time limited, single-stake tournament embedded in main game.

--Improved formulas used on leaderboards.

--Added Elo ratings.

--Fixed leaderboards to hide effects of live games (so you can't check who
  you're playing against by watching changes in leaderboard numbers).

--Improved security by passing Yubikey through a regexp and not logging failed
  admin passwords (thanks Cayce U).

--Fixed to pass user-submitted credit card data through a regexp to prevent
  exec injection attacks.  Card data was validated as being properly encrypted,
  but after decryption, it was trusted blindly (thanks Cayce U).
